sign up page and log in added

--- a/ecosun/public/themes/dark/style.css
+++ b/ecosun/public/themes/dark/style.css
@@ -59,6 +59,13 @@ html{
 html {
   scroll-behavior: smooth;
 }
+.active {
+  color: white; /* Active form color */
+}
+
+.inactive {
+  color: grey; /* Inactive form color */
+}
 
 * {
   margin: 0;
