--- a/ecosun/public/themes/light/style.css
+++ b/ecosun/public/themes/light/style.css
@@ -5500,7 +5500,9 @@ body.loaded {
 }
 
 .contact-crev input,
-.contact-crev textarea {
+.contact-crev textarea,.select-category,
+.unit-select,
+.result {
   width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 10px;
