--- a/ecosun/public/themes/dark/style.css
+++ b/ecosun/public/themes/dark/style.css
@@ -66,6 +66,11 @@ html {
 .inactive {
   color: grey; /* Inactive form color */
 }
+.active-link {
+  color: #f6ad55; /* Change this to your desired active color */
+  font-weight: bold; /* Optional: make it bold */
+}
+
 
 * {
   margin: 0;
