--- a/ecosun/public/themes/light/style.css
+++ b/ecosun/public/themes/light/style.css
@@ -8923,29 +8923,47 @@ header.in-box {
   width: 100%;
   height: 5px;
   top: -5px;
-  background: none;
-  pointer-events: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+   background: #ffaa17;
+
+}
+.range-input input[type="range"] {
+  width: 100%;
+  appearance: none;
+  height: 6px;
+  background: #dddddd00; /* Track background */
+  border-radius: 4px;
+  outline: none;
 }
 
-.main-shop .sidebar .price-range input[type="range"]::-webkit-slider-thumb {
-  height: 17px;
-  width: 5px;
-  border: none;
-  background: #ffaa17;
-  pointer-events: auto;
-  -webkit-appearance: none;
+/* Track */
+.range-input input[type="range"]::-webkit-slider-runnable-track {
+  height: 6px;
+  background: linear-gradient(to left, #ffaa17 0%, #ffaa17 var(--progress), #ddd var(--progress), #ddd 100%);
+  border-radius: 4px;
 }
 
-.main-shop .sidebar .price-range input[type="range"]::-moz-range-thumb {
-  height: 17px;
-  width: 5px;
-  border: none;
+/* Thumb */
+.range-input input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  width: 17px;
+  height: 5px;
   background: #ffaa17;
-  pointer-events: auto;
-  -moz-appearance: none;
+  border-radius: 50%;
+  cursor: pointer;
+  margin-top: -6px; /* Center the thumb */
 }
+
+/* For Firefox */
+.range-input input[type="range"]::-moz-range-track {
+  height: 6px;
+  background: #dddddd00;
+  border-radius: 4px;
+}
+
+.range-input input[type="range"]::-moz-range-progress {
+  background: #ffaa17;
+}
+
 
 .main-shop .sidebar .best-sale .line-list {
   margin-bottom: 30px;
