--- a/ecosun/public/themes/dark/style.css
+++ b/ecosun/public/themes/dark/style.css
@@ -4808,7 +4808,7 @@ body.loaded {
   position: relative;
 }
 
-.blog-modern .item .img .date {
+.date {
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 0px;
@@ -4821,7 +4821,7 @@ body.loaded {
   opacity: .7;
 }
 
-.blog-modern .item .img .date:after {
+.date:after {
   content: '';
   position: absolute;
   top: 50%;
