--- a/ecosun/public/themes/light/style.css
+++ b/ecosun/public/themes/light/style.css
@@ -3108,7 +3108,7 @@ body.loaded {
 /* Menu
 -----------------------------------------------------------------*/
 .navbar {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   padding: 0;
