--- a/ecosun/src/assets/css/style.css
+++ b/ecosun/src/assets/css/style.css
@@ -3022,7 +3022,7 @@ body.loaded {
 /* Menu
 -----------------------------------------------------------------*/
 .navbar {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   padding: 0;
